# bekuta

./: README.md  main.py  profiling.py  pyproject.toml
benchmarks/: ivf_flat.py
docs/: part_1.md
docs/blog/: part_1.md  part_2.md
src/: engine.py  flat.py  kernels.py  utils.py
src/bekuta/: __init__.py  base.py  engine.py  ivf.py  kernels.py
