[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bekuta"
version = "0.1.0"
description = "a toy vector search library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
